# blockchain-book

./: README.md  pyproject.toml
chapters/chapter_2/hashing_files/: hashing_files.py
chapters/chapter_2/hashing_strings/: hashing_strings.py
chapters/chapter_4/: full_blockchain.py
chapters/chapter_5/: server_part_1.py  server_part_3.py  server_part_4.py
chapters/chapter_6/: blockchain.py  client.py  pki.py
chapters/chapter_7/: node.py  pyproject.toml  wallet.json
chapters/chapter_7/funcoin/: blockchain.py  connections.py  messages.py  schema.py  server.py
chapters/chapter_7/tests/: conftest.py  test_peers.py  test_transactions.py
examples/chapter_2/hashing_emails/: hashing_emails.py
examples/chapter_3/: full_blockchain.py
examples/chapter_5/: asyncio_introduction.py  server.py  server_part_2.py  server_part_5.py
examples/chapter_6/: server.py  settings.py  signatures.py
examples/chapter_7/: config.py  notes.adoc
examples/chapter_7/funcoin/: blockchain.py  models.py  peers.py  transactions.py  utils.py
examples/chapter_7/tests/: test_messages.py
tests/: test_funcoin.py
